# hexchat_translator

./: .gitignore  .project  Cargo.toml  LICENSE-MIT  README.md
src/: lib.rs
