[package]
name = "hexchat_translator"
version = "0.1.1"
authors = ["ttappr <tmtappr@gmail.com>"]
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "translator"
crate-type = ["cdylib"]

[dependencies]
hexchat-api = "0.2.*"
regex = "1.8.1"
serde_json = "1.0"
ureq = { version = "2.0" }
urlparse = "0.7"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1


