[package]
name = "hexchat_translator"
version = "1.0.3"
authors = ["ttappr <tmtappr@gmail.com>"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "translator"
crate-type = ["cdylib"]

[dependencies]
hexchat-api = "0.3.*"
regex = "1.8.1"
serde_json = "1.0"
ureq = { version = "2.0" }
urlparse = "0.7"

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1


